vlib/v/checker/tests/reserved_type_name_const_err.vv
const int = 3

const f64 = 'string'
